extra section and images added

--- a/style.css
+++ b/style.css
@@ -138,3 +138,56 @@ section {
   font-weight: 300;
   margin-bottom: 40px;
 }
+/* extra section */
+.extra {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.extra h2 {
+  font-size: 48px;
+  font-weight: bold;
+}
+.extra-cards {
+  width: 1383px;
+  display: flex;
+  justify-content: space-between;
+}
+.extra-card {
+  width: 360px;
+  box-shadow: 2px 2px 20px black;
+  border-radius: 20px;
+}
+.extra-card h1 {
+  font-size: 24px;
+  font-weight: 600;
+}
+.extra-card p {
+  font-size: 16px;
+  font-weight: 300;
+}
+.extra-card-1,
+.extra-card-2,
+.extra-card-3 {
+  padding: 20px;
+}
+.extra-card-img-1 {
+  background-image: url(./jhankar-bhai.jpg);
+  width: 360px;
+  height: 450px;
+  background-repeat: no-repeat;
+}
+.extra-card-img-2 {
+  background-image: url(./my\ pic.jpg);
+  width: 360px;
+  height: 450px;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+.extra-card-img-3 {
+  background-image: url(./programming-hero.jpg);
+  width: 360px;
+  height: 450px;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
