--- a/style.css
+++ b/style.css
@@ -19,16 +19,15 @@ section {
 .hero-section-contents h1 {
   font-size: 65px;
   margin: 0;
+  border-left: 2px solid orangered;
+  padding-left: 20px;
+  border-radius: 1px;
+  font-family: "Yeseva One", cursive;
 }
 .hero-section-contents p {
   width: 471px;
   font-weight: 300;
   margin-bottom: 30px;
-}
-.hero-section-border {
-  border-left: 2px solid orangered;
-  padding-left: 20px;
-  border-radius: 1px;
 }
 .text-color {
   color: orangered;
@@ -190,4 +189,24 @@ section {
   height: 450px;
   background-size: contain;
   background-repeat: no-repeat;
+}
+/* footer */
+footer {
+  height: 200px;
+  background-color: #0b0d17;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+footer h1 {
+  color: white;
+  font-size: 36px;
+  font-family: "Lobster", cursive;
+  text-align: center;
+}
+footer p {
+  color: #d9dbe1;
+  text-align: center;
+  font-size: 14px;
+  font-family: "Manrope", sans-serif;
 }
